--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/all.min.css">
     <link rel="stylesheet" href="./styles/index.css">
-    <title>East Anglia Furniture1</title>
+    <title>East Anglia Furniture</title>
 </head>
 
 <body>
