- change names to copied ones

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             </span>
         </div>
         <div class="rightfirstheader">
-            <a href=""><i style="font-size: 20px;" class="fa-solid fa-user"></i></a>
-            <a href=""><i style="font-size: 20px;" class="fa-solid fa-cart-shopping"></i></a>
-            <a href=""><i style="font-size: 20px;" class="fa-solid fa-magnifying-glass"></i></a>
+            <a href="#"><i style="font-size: 20px;" class="fa-solid fa-user"></i></a>
+            <a href="#"><i style="font-size: 20px;" class="fa-solid fa-cart-shopping"></i></a>
+            <a href="#"><i style="font-size: 20px;" class="fa-solid fa-magnifying-glass"></i></a>
         </div>
     </div>
 
@@ -30,11 +30,11 @@
     <!-- start second header -->
     <nav>
         <div class="nav">
-            <a href="">Sofa</a>
-            <a href="">Sofa Beds</a>
-            <a href="">Recliner Sofas</a>
-            <a href="">Beds</a>
-            <a href="">Furniture</a>
+            <a href="#">Furniture</a>
+            <a href="#">Bathroom</a>
+            <a href="#">Kitchen</a>
+            <a href="#">Outdoor</a>
+            <a href="#">Office</a>
         </div>
     </nav>
     <!-- end second header -->
@@ -50,16 +50,16 @@
     <!-- start second container -->
     <h1 class="s_h">Shop by category</h1>
     <section class="s_container">
-        <a href=""><img src="./asset/Sofas_cat-300x300.jpg.webp" alt="">
+        <a href="#"><img src="./asset/Sofas_cat-300x300.jpg.webp" alt="">
             <h2>SOFAS</h2>
         </a>
-        <a href=""><img src="./asset/chiswick_3_of_5__4_1-300x300.jpg" alt="">
+        <a href="#"><img src="./asset/chiswick_3_of_5__4_1-300x300.jpg" alt="">
             <h2 class="s_shop">SOFA BEDS</h2>
         </a>
-        <a href=""><img src="./asset/roma_black_leather_3_2_room_set-300x300.jpg" alt="">
+        <a href="#"><img src="./asset/roma_black_leather_3_2_room_set-300x300.jpg" alt="">
             <h2 class="t_shop">RECLINER SOFAS</h2>
         </a>
-        <a href=""><img src="./asset/Beds_cat-300x300.jpg.webp" alt="">
+        <a href="#"><img src="./asset/Beds_cat-300x300.jpg.webp" alt="">
             <h2 class="f_shop">BEDS</h2>
         </a>
 
@@ -68,6 +68,7 @@
     </section>
 
     <!-- end second container -->
+
     <!-- start third container -->
     <section class="t_container">
         <div class="f_div"><img src="./asset/madeinuk-e1688809510434-300x300.png.webp" alt=""></div>
@@ -127,11 +128,11 @@
     <!-- end six container -->
     <!-- start communication container -->
     <div class="commu_container">
-        <a href=""><i class="fa-brands fa-square-facebook"></i> Facbook</a>
-        <a href=""><i class="fa-brands fa-square-instagram"></i> Instagram</a>
-        <a href=""><i class="fa-brands fa-square-whatsapp"></i> Whatsapp</a>
-        <a href=""><i class="fa-solid fa-phone"></i> Phone</a>
-        <a href=""><i class="fa-regular fa-envelope"></i> Email</a>
+        <a href="#"><i class="fa-brands fa-square-facebook"></i> Facbook</a>
+        <a href="#"><i class="fa-brands fa-square-instagram"></i> Instagram</a>
+        <a href="#"><i class="fa-brands fa-square-whatsapp"></i> Whatsapp</a>
+        <a href="#"><i class="fa-solid fa-phone"></i> Phone</a>
+        <a href="#"><i class="fa-regular fa-envelope"></i> Email</a>
 
 
 
@@ -144,17 +145,17 @@
         <div class="how">
             <h1>How Can We Help</h1>
             <ul>
-                <li><a href="">Terms&Conditions</a></li>
-                <li><a href="">Privacy Policy</a></li>
-                <li><a href="">Refunds and Returns Policy</a></li>
+                <li><a href="#">Terms&Conditions</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Refunds and Returns Policy</a></li>
             </ul>
         </div>
         <div class="about">
             <h1>About Us</h1>
             <ul>
-                <li><a href="">Contact Us</a></li>
-                <li><a href="">Sustainability</a></li>
-                <li><a href="">Careers</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Sustainability</a></li>
+                <li><a href="#">Careers</a></li>
             </ul>
         </div>
         <div class="opening">
