--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
     <!-- start second header -->
     <nav>
         <div class="nav">
-            <a href="#">Furniture</a>
-            <a href="#">Bathroom</a>
             <a href="#">Kitchen</a>
             <a href="#">Outdoor</a>
             <a href="#">Office</a>
+            <a href="#">Beds</a>
         </div>
     </nav>
     <!-- end second header -->
@@ -184,8 +183,16 @@
     <!-- start footer -->
     <footer>
         <p>Copyright © 2023 East Anglia Furniture</p>
+        <div>
+            <svg class="ast-arrow-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                version="1.1" x="0px" y="0px" width="26px" height="16.043px" viewBox="57 35.171 26 16.043"
+                enable-background="new 57 35.171 26 16.043" xml:space="preserve">
+                <path d="M57.5,38.193l12.5,12.5l12.5-12.5l-2.5-2.5l-10,10l-10-10L57.5,38.193z"></path>
+            </svg>
+        </div>
     </footer>
 
+    <script src="./scripts/index.js" type="text/javascript"></script>
 </body>
 
 </html>
