firstchange-bed-mohamed

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <!-- start second header -->
     <nav>
         <div class="nav">
-            <a href="#">Kitchen</a>
-            <a href="#">Outdoor</a>
-            <a href="#">Office</a>
-            <a href="#">Beds</a>
+            <a href="./kitchen.html">Kitchen</a>
+            <a href="./dining table.html">Dining Table</a>
+            <a href="./office.html">Office</a>
+            <a href="./beds.html">Beds</a>
         </div>
     </nav>
     <!-- end second header -->
