--- a/office.html
+++ b/office.html
@@ -11,7 +11,7 @@
     <!-- start first header -->
     <div class="firstheader">
         <div class="leftfirstheader">
-            <a href="#"><img src="./asset/Logo-Eaf-resized-500x500-2-85x85.png.webp" alt="Logo"></a>
+            <a href="./index.html"><img src="./asset/Logo-Eaf-resized-500x500-2-85x85.png.webp" alt="Logo"></a>
             <span>
                 <h3>East Anglia Furniture</h3>
                 <p>Your Home, Our Passion.</p>
@@ -31,7 +31,7 @@
             <a href="./kitchen.html">Kitchen</a>
             <a href="./dining table.html">Dining Table</a>
             <a class="kitchen" href="#">Office</a>
-            <a href="#">Beds</a>
+            <a href="./office.html">Beds</a>
         </div>
     </nav>
     <!-- end second header -->
