--- a/kitchen.html
+++ b/kitchen.html
@@ -11,7 +11,7 @@
     <!-- start first header -->
     <div class="firstheader">
         <div class="leftfirstheader">
-            <a href="#"><img src="./asset/Logo-Eaf-resized-500x500-2-85x85.png.webp" alt="Logo"></a>
+            <a href="./index.html"><img src="./asset/Logo-Eaf-resized-500x500-2-85x85.png.webp" alt="Logo"></a>
             <span>
                 <h3>East Anglia Furniture</h3>
                 <p>Your Home, Our Passion.</p>
@@ -30,8 +30,8 @@
         <div class="nav">
             <a class="kitchen" href="#">Kitchen</a>
             <a href="./dining table.html">Dining Table</a>
-            <a href="#">Office</a>
-            <a href="#">Beds</a>
+            <a href="./office.html">Office</a>
+            <a href="./beds.html">Beds</a>
         </div>
     </nav>
     <!-- end second header -->
