--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
 </head>
 
 <body>
+    
+     <!-- start login procedure -->
+ <div class="popup">
+  <div id="panel">
+   <header><span>Login To Your Account</span><span id="xit">&#10006;</span></header>
+   <hr/>
+   <form action="#">
+    <label for="username">Username</label>
+    <input id="username" name="username" />
+    <label for="password">Password</label>
+    <input id="password" name="password" type="password" />
+    <button onclick="val(event);">Forget password?</button>
+    <button onclick="val(event);">Login</button>
+    <div><span>Don't have an account?</span><button onclick="val(event);">Create an account</button></div>
+   </form>
+  </div>
+ </div>
+ <!-- end login procedure -->
+    
     <!-- start first header -->
     <div class="firstheader">
         <div class="leftfirstheader">
@@ -20,7 +39,7 @@
             </span>
         </div>
         <div class="rightfirstheader">
-            <a href="#"><i style="font-size: 20px;" class="fa-solid fa-user"></i></a>
+            <a href="#" id="login"><i style="font-size: 20px;" class="fa-solid fa-user"></i></a>
             <a href="#"><i style="font-size: 20px;" class="fa-solid fa-cart-shopping"></i></a>
             <a href="#"><i style="font-size: 20px;" class="fa-solid fa-magnifying-glass"></i></a>
         </div>
