--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <!-- start login procedure -->
-    <div class="popup">
+    <!-- <div class="popup">
         <div id="panel">
             <header><span>Login To Your Account</span><span id="xit">&#10006;</span></header>
             <hr />
@@ -26,7 +26,7 @@
                 <div><span>Don't have an account?</span><button onclick="val(event);">Create an account</button></div>
             </form>
         </div>
-    </div>
+    </div> -->
     <!-- end login procedure -->
 
     <!-- start first header -->
