--- a/kitchen.html
+++ b/kitchen.html
@@ -41,8 +41,8 @@
     </div>
     <!-- end headline -->
     <!-- start products -->
-    <div class="products">
-
+    <div class="products" id="Kitchen">
+        
     </div>
     <!-- end products -->
     <!-- start communication container -->
