finish get cart

--- a/beds.html
+++ b/beds.html
@@ -31,7 +31,7 @@
             <a href="./kitchen.html">Kitchen</a>
             <a href="./dining table.html">Dining Table</a>
             <a href="./office.html">Office</a>
-            <a class="kitchen" href="#">Beds</a>
+            <a class="kitchen" href="./beds.html">Beds</a>
         </div>
     </nav>
     <!-- end second header -->
@@ -113,7 +113,7 @@
     </footer>
 
     <script src="./scripts/index.js" type="text/javascript"></script>
-
+    <script src="./scripts/beds.js"></script>
 
 
     
