--- a/dining table.html
+++ b/dining table.html
@@ -41,7 +41,7 @@
     </div>
     <!-- end headline -->
     <!-- start products -->
-    <div class="products">
+    <div class="products" id="diningtable">
 
     </div>
     <!-- end products -->
@@ -113,7 +113,8 @@
     </footer>
 
     <script src="./scripts/index.js" type="text/javascript"></script>
-
+    <script src="./scripts/dining table.js"></script>
+    
 
 
     
