--- a/kitchen.html
+++ b/kitchen.html
@@ -113,7 +113,8 @@
     </footer>
 
     <script src="./scripts/index.js" type="text/javascript"></script>
-
+    <script src="./scripts/kitchen.js"></script>
+    
 
 
     
