--- a/office.html
+++ b/office.html
@@ -31,7 +31,7 @@
             <a href="./kitchen.html">Kitchen</a>
             <a href="./dining table.html">Dining Table</a>
             <a class="kitchen" href="#">Office</a>
-            <a href="./office.html">Beds</a>
+            <a href="./beds.html">Beds</a>
         </div>
     </nav>
     <!-- end second header -->
@@ -41,7 +41,7 @@
     </div>
     <!-- end headline -->
     <!-- start products -->
-    <div class="products">
+    <div class="products" id="office">
 
     </div>
     <!-- end products -->
@@ -113,7 +113,8 @@
     </footer>
 
     <script src="./scripts/index.js" type="text/javascript"></script>
-
+    <script src="./scripts/office.js"></script>
+    
 
 
     
