- fix layout -remove search

--- a/beds.html
+++ b/beds.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +8,20 @@
     <link rel="stylesheet" href="./styles/index.css">
     <title>Beds</title>
 </head>
+
 <body>
     <!-- start first header -->
     <div class="firstheader">
         <div class="leftfirstheader">
-            <a href="./index.html"><img src="./asset/Logo-Eaf-resized-500x500-2-85x85.png.webp" alt="Logo"></a>
+            <a href="#"><img src="./asset/Logo-Eaf-resized-500x500-2-85x85.png.webp" alt="Logo"></a>
             <span>
                 <h3>East Anglia Furniture</h3>
                 <p>Your Home, Our Passion.</p>
             </span>
         </div>
         <div class="rightfirstheader">
-            <a href="#"><i style="font-size: 20px;" class="fa-solid fa-user"></i></a>
+            <a><i id="login" style="font-size: 20px;" class="fa-solid fa-user"></i></a>
             <a href="#"><i style="font-size: 20px;" class="fa-solid fa-cart-shopping"></i></a>
-            <a href="#"><i style="font-size: 20px;" class="fa-solid fa-magnifying-glass"></i></a>
         </div>
     </div>
 
@@ -42,7 +43,7 @@
     <!-- end headline -->
     <!-- start products -->
     <div class="products" id="Bed">
-        
+
     </div>
     <!-- end products -->
     <!-- start communication container -->
@@ -116,6 +117,7 @@
     <script src="./scripts/beds.js"></script>
 
 
-    
+
 </body>
+
 </html>
