- add link to the logo

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <!-- start first header -->
     <div class="firstheader">
         <div class="leftfirstheader">
-            <a href="#"><img src="./asset/Logo-Eaf-resized-500x500-2-85x85.png.webp" alt="Logo"></a>
+            <a href="./index.html"><img src="./asset/Logo-Eaf-resized-500x500-2-85x85.png.webp" alt="Logo"></a>
             <span>
                 <h3>East Anglia Furniture</h3>
                 <p>Your Home, Our Passion.</p>
             </span>
         </div>
         <div class="rightfirstheader">
-            <a><i id="login" style="font-size: 20px;" class="fa-solid fa-user"></i></a>
+            <a href="#"><i style="font-size: 20px;" class="fa-solid fa-user"></i></a>
             <a href="#"><i style="font-size: 20px;" class="fa-solid fa-cart-shopping"></i></a>
         </div>
     </div>
