--- a/kitchen.html
+++ b/kitchen.html
@@ -11,7 +11,7 @@
     <!-- start first header -->
     <div class="firstheader">
         <div class="leftfirstheader">
-            <a href="#"><img src="./asset/Logo-Eaf-resized-500x500-2-85x85.png.webp" alt="Logo"></a>
+            <a href="./index.html"><img src="./asset/Logo-Eaf-resized-500x500-2-85x85.png.webp" alt="Logo"></a>
             <span>
                 <h3>East Anglia Furniture</h3>
                 <p>Your Home, Our Passion.</p>
