--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
     <h1 class="s_h">Shop by category</h1>
     <section class="s_container">
         <a href="#"><img src="./asset/Sofas_cat-300x300.jpg.webp" alt="">
-            <h2>SOFAS</h2>
+            <h2>KITCHEN</h2>
         </a>
         <a href="#"><img src="./asset/chiswick_3_of_5__4_1-300x300.jpg" alt="">
-            <h2 class="s_shop">SOFA BEDS</h2>
+            <h2 class="s_shop">DINING TABLE</h2>
         </a>
         <a href="#"><img src="./asset/roma_black_leather_3_2_room_set-300x300.jpg" alt="">
-            <h2 class="t_shop">RECLINER SOFAS</h2>
+            <h2 class="t_shop">OFFICE</h2>
         </a>
         <a href="#"><img src="./asset/Beds_cat-300x300.jpg.webp" alt="">
             <h2 class="f_shop">BEDS</h2>
