- fix margin & h2 in index.html - عبيلوا و اديلو البتاعة الشفافة اللي كانت في الصفحة الرئيسية كان واحده فيهم بايظة و نازلة تحت بتعمل overflow

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
     <!-- start second container -->
     <h1 class="s_h">Shop by category</h1>
     <section class="s_container">
-        <a href="#"><img src="./asset/Sofas_cat-300x300.jpg.webp" alt="">
+        <a href="#"><img src="https://images.pexels.com/photos/19227212/pexels-photo-19227212/free-photo-of-view-of-a-modern-kitchen-with-black-and-wooden-cabinets.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
             <h2>KITCHEN</h2>
         </a>
-        <a href="#"><img src="./asset/chiswick_3_of_5__4_1-300x300.jpg" alt="">
+        <a href="#"><img src="https://images.pexels.com/photos/3356416/pexels-photo-3356416.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
             <h2 class="s_shop">DINING TABLE</h2>
         </a>
-        <a href="#"><img src="./asset/roma_black_leather_3_2_room_set-300x300.jpg" alt="">
+        <a href="#"><img src="https://media.istockphoto.com/id/153896360/photo/modern-office.jpg?s=612x612&w=0&k=20&c=SvULascjJ_3pnRvLQGAfw0V-B7iF6mq1qyv-G_TsEBc=" alt="">
             <h2 class="t_shop">OFFICE</h2>
         </a>
         <a href="#"><img src="./asset/Beds_cat-300x300.jpg.webp" alt="">
