--- a/index.html
+++ b/index.html
@@ -41,21 +41,27 @@
     <!-- start first container -->
     <section class="f_container">
         <h1>Welcome to EAF</h1>
-        <h1>Home of Exceptional Furniture!</h1>
+        <h2>Home of Exceptional Furniture!</h2>
         <h2>Discover our curated collection of stylish and comfortable fu
             rnishings, designed to transform your living space. Explore now and create your dream home!</h2>
     </section>
     <!-- end first container -->
     <!-- start second container -->
-    <h1 class="s_h">Shop by category</h1>
+    <h2 class="s_h">Shop by category</h2>
     <section class="s_container">
-        <a href="#"><img src="https://images.pexels.com/photos/19227212/pexels-photo-19227212/free-photo-of-view-of-a-modern-kitchen-with-black-and-wooden-cabinets.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
+        <a href="#"><img
+                src="https://images.pexels.com/photos/19227212/pexels-photo-19227212/free-photo-of-view-of-a-modern-kitchen-with-black-and-wooden-cabinets.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
+                alt="">
             <h2>KITCHEN</h2>
         </a>
-        <a href="#"><img src="https://images.pexels.com/photos/3356416/pexels-photo-3356416.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
+        <a href="#"><img
+                src="https://images.pexels.com/photos/3356416/pexels-photo-3356416.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt="">
             <h2 class="s_shop">DINING TABLE</h2>
         </a>
-        <a href="#"><img src="https://media.istockphoto.com/id/153896360/photo/modern-office.jpg?s=612x612&w=0&k=20&c=SvULascjJ_3pnRvLQGAfw0V-B7iF6mq1qyv-G_TsEBc=" alt="">
+        <a href="#"><img
+                src="https://media.istockphoto.com/id/153896360/photo/modern-office.jpg?s=612x612&w=0&k=20&c=SvULascjJ_3pnRvLQGAfw0V-B7iF6mq1qyv-G_TsEBc="
+                alt="">
             <h2 class="t_shop">OFFICE</h2>
         </a>
         <a href="#"><img src="./asset/Beds_cat-300x300.jpg.webp" alt="">
