--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </div>
 
     <!-- end first header -->
+    
     <!-- start second header -->
     <nav>
         <div class="nav">
@@ -149,31 +150,37 @@
     <!-- start about -->
     <section class="section_about">
         <div class="how">
-            <h1>How Can We Help</h1>
             <ul>
+                <li>
+                    <h1>How Can We Help</h1>
+                </li>
                 <li><a href="#">Terms&Conditions</a></li>
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">Refunds and Returns Policy</a></li>
             </ul>
         </div>
         <div class="about">
-            <h1>About Us</h1>
             <ul>
+                <li>
+                    <h1>About Us</h1>
+                </li>
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">Sustainability</a></li>
                 <li><a href="#">Careers</a></li>
             </ul>
         </div>
         <div class="opening">
-            <h1>Opening Hours</h1>
             <ul>
-                <li><b>Monday</b> 10:00 - 18:00</li>
-                <li><b>Tuesday</b> 10:00 - 18:00</li>
-                <li><b>Wednesday</b> 10:00 - 18:00</li>
-                <li><b>Thursday</b> 10:00 - 18:00</li>
-                <li><b>Friday</b> 10:00 - 18:00</li>
-                <li><b>Saturday</b> 10:00 - 18:00</li>
-                <li><b>Sunday</b> 10:00 - 18:00</li>
+                <li>
+                    <h1>Opening Hours</h1>
+                </li>
+                <li><b>Monday</b> <span>10:00 - 18:00</span></li>
+                <li><b>Tuesday</b> <span>10:00 - 18:00</span></li>
+                <li><b>Wednesday</b> <span>10:00 - 18:00</span></li>
+                <li><b>Thursday</b> <span>10:00 - 18:00</span></li>
+                <li><b>Friday</b> <span>10:00 - 18:00</span></li>
+                <li><b>Saturday</b> <span>10:00 - 18:00</span></li>
+                <li><b>Sunday</b> <span>10:00 - 18:00</span></li>
 
 
             </ul>
