--- a/beds.html
+++ b/beds.html
@@ -79,15 +79,17 @@
             </ul>
         </div>
         <div class="opening">
-            <h1>Opening Hours</h1>
             <ul>
-                <li><b>Monday</b> 10:00 - 18:00</li>
-                <li><b>Tuesday</b> 10:00 - 18:00</li>
-                <li><b>Wednesday</b> 10:00 - 18:00</li>
-                <li><b>Thursday</b> 10:00 - 18:00</li>
-                <li><b>Friday</b> 10:00 - 18:00</li>
-                <li><b>Saturday</b> 10:00 - 18:00</li>
-                <li><b>Sunday</b> 10:00 - 18:00</li>
+                <li>
+                    <h1>Opening Hours</h1>
+                </li>
+                <li><b>Monday</b> <span>10:00 - 18:00</span></li>
+                <li><b>Tuesday</b> <span>10:00 - 18:00</span></li>
+                <li><b>Wednesday</b> <span>10:00 - 18:00</span></li>
+                <li><b>Thursday</b> <span>10:00 - 18:00</span></li>
+                <li><b>Friday</b> <span>10:00 - 18:00</span></li>
+                <li><b>Saturday</b> <span>10:00 - 18:00</span></li>
+                <li><b>Sunday</b> <span>10:00 - 18:00</span></li>
 
 
             </ul>
