--- a/dining table.html
+++ b/dining table.html
@@ -12,18 +12,18 @@
     <div class="firstheader">
         <div class="leftfirstheader">
             <a href="./index.html"><img src="./asset/Logo-Eaf-resized-500x500-2-85x85.png.webp" alt="Logo"></a>
-            <span>
+            <div class="slogan">
                 <h3>East Anglia Furniture</h3>
                 <p>Your Home, Our Passion.</p>
-            </span>
+            </div>
         </div>
         <div class="rightfirstheader">
-            <a><i id="login" style="font-size: 20px;" class="fa-solid fa-user"></i></a>
-            <a href="#"><i style="font-size: 20px;" class="fa-solid fa-cart-shopping"></i></a>
+            <span><i style="font-size: 20px;" class="fa-solid fa-user"></i></span>
+            <span><i style="font-size: 20px;" class="fa-solid fa-cart-shopping"></i></span>
         </div>
     </div>
-
     <!-- end first header -->
+    
     <!-- start second header -->
     <nav>
         <div class="nav">
