- replace font-awesome with SVG and custom behavior

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 </head>
 
 <body>
-
-
     <!-- start first header -->
     <div class="firstheader">
         <div class="leftfirstheader">
@@ -22,8 +20,20 @@
             </div>
         </div>
         <div class="rightfirstheader">
-            <span><i style="font-size: 20px;" class="fa-solid fa-user"></i></span>
-            <span><i style="font-size: 20px;" class="fa-solid fa-cart-shopping"></i></span>
+            <div class="downeffect">
+                <svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="rgb(226,228,52)"
+                    viewBox="0 0 448 512"><!-- https://fontawesome.com/icons/user?f=classic&s=solid -->
+                    <path
+                        d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
+                </svg>
+            </div>
+            <div class="downeffect">
+                <svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="rgb(226,228,52)"
+                    viewBox="0 0 576 512"><!-- https://fontawesome.com/v5/icons/shopping-cart?f=classic&s=solid -->
+                    <path
+                        d="M528.1 301.3l47.3-208C578.8 78.3 567.4 64 552 64H159.2l-9.2-44.8C147.8 8 137.9 0 126.5 0H24C10.7 0 0 10.7 0 24v16c0 13.3 10.7 24 24 24h69.9l70.2 343.4C147.3 417.1 136 435.2 136 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-15.7-6.4-29.8-16.8-40h209.6C430.4 426.2 424 440.3 424 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-22.2-12.9-41.3-31.6-50.4l5.5-24.3c3.4-15-8-29.3-23.4-29.3H218.1l-6.5-32h293.1c11.2 0 20.9-7.8 23.4-18.7z" />
+                </svg>
+            </div>
         </div>
     </div>
     <!-- end first header -->
@@ -47,6 +57,7 @@
             rnishings, designed to transform your living space. Explore now and create your dream home!</h2>
     </section>
     <!-- end first container -->
+
     <!-- start second container -->
     <h2 class="s_h">Shop by category</h2>
     <section class="s_container">
@@ -68,11 +79,7 @@
         <a href="#"><img src="./asset/Beds_cat-300x300.jpg.webp" alt="">
             <h2 class="f_shop">BEDS</h2>
         </a>
-
-
-
     </section>
-
     <!-- end second container -->
 
     <!-- start third container -->
@@ -87,15 +94,12 @@
                 Don’t miss out on this opportunity to own a piece of British craftsmanship at an unbeatable price. Shop
                 now and elevate your home decor with our stunning collection of British-made furniture.</p>
         </div>
-
     </section>
-
     <!-- end third container -->
+
     <!-- start fourth container -->
-
-
-
     <!-- end fourth container -->
+
     <!-- start fifth container -->
     <section class="fifth_container">
         <div class="f_div">
@@ -112,10 +116,9 @@
 
 
     </section>
-
-
     <!-- end fifth container -->
-    <!-- start six container -->
+
+    <!-- start sixth container -->
     <section class="t_container">
         <div class="f_div"><img src="./asset/featureicon2-e1688809466853-300x300.png.webp" alt=""></div>
         <div class="s_div">
@@ -130,8 +133,8 @@
         </div>
 
     </section>
+    <!-- end sixth container -->
 
-    <!-- end six container -->
     <!-- start communication container -->
     <div class="commu_container">
         <a href="#"><i class="fa-brands fa-square-facebook"></i> Facbook</a>
@@ -139,13 +142,9 @@
         <a href="#"><i class="fa-brands fa-square-whatsapp"></i> Whatsapp</a>
         <a href="#"><i class="fa-solid fa-phone"></i> Phone</a>
         <a href="#"><i class="fa-regular fa-envelope"></i> Email</a>
-
-
-
-
     </div>
-
     <!-- end communication container -->
+
     <!-- start about -->
     <section class="section_about">
         <div class="how">
