--- a/office.html
+++ b/office.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./styles/index.css">
     <title>Office</title>
 </head>
+
 <body>
     <!-- start first header -->
     <div class="firstheader">
@@ -18,8 +20,20 @@
             </div>
         </div>
         <div class="rightfirstheader">
-            <span><i style="font-size: 20px;" class="fa-solid fa-user"></i></span>
-            <span><i style="font-size: 20px;" class="fa-solid fa-cart-shopping"></i></span>
+            <div class="downeffect">
+                <svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="rgb(226,228,52)"
+                    viewBox="0 0 448 512"><!-- https://fontawesome.com/icons/user?f=classic&s=solid -->
+                    <path
+                        d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
+                </svg>
+            </div>
+            <div class="downeffect">
+                <svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="rgb(226,228,52)"
+                    viewBox="0 0 576 512"><!-- https://fontawesome.com/v5/icons/shopping-cart?f=classic&s=solid -->
+                    <path
+                        d="M528.1 301.3l47.3-208C578.8 78.3 567.4 64 552 64H159.2l-9.2-44.8C147.8 8 137.9 0 126.5 0H24C10.7 0 0 10.7 0 24v16c0 13.3 10.7 24 24 24h69.9l70.2 343.4C147.3 417.1 136 435.2 136 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-15.7-6.4-29.8-16.8-40h209.6C430.4 426.2 424 440.3 424 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-22.2-12.9-41.3-31.6-50.4l5.5-24.3c3.4-15-8-29.3-23.4-29.3H218.1l-6.5-32h293.1c11.2 0 20.9-7.8 23.4-18.7z" />
+                </svg>
+            </div>
         </div>
     </div>
     <!-- end first header -->
@@ -116,9 +130,10 @@
 
     <script src="./scripts/index.js" type="text/javascript"></script>
     <script src="./scripts/office.js"></script>
-    
 
 
-    
+
+
 </body>
+
 </html>
