--- a/index.html
+++ b/index.html
@@ -21,24 +21,24 @@
         <div class="rightfirstheader">
             <div class="downeffect">
                 <svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="rgb(226,228,52)"
-                viewBox="0 0 448 512"><!-- https://fontawesome.com/icons/user?f=classic&s=solid -->
+                    viewBox="0 0 448 512"><!-- https://fontawesome.com/icons/user?f=classic&s=solid -->
                     <path
-                    d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
+                        d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
                 </svg>
             </div>
             <div class="downeffect">
                 <svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="rgb(226,228,52)"
-                viewBox="0 0 576 512"><!-- https://fontawesome.com/v5/icons/shopping-cart?f=classic&s=solid -->
-                <path
-                d="M528.1 301.3l47.3-208C578.8 78.3 567.4 64 552 64H159.2l-9.2-44.8C147.8 8 137.9 0 126.5 0H24C10.7 0 0 10.7 0 24v16c0 13.3 10.7 24 24 24h69.9l70.2 343.4C147.3 417.1 136 435.2 136 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-15.7-6.4-29.8-16.8-40h209.6C430.4 426.2 424 440.3 424 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-22.2-12.9-41.3-31.6-50.4l5.5-24.3c3.4-15-8-29.3-23.4-29.3H218.1l-6.5-32h293.1c11.2 0 20.9-7.8 23.4-18.7z" />
-            </svg>
-            <span id="notif">0</span>
+                    viewBox="0 0 576 512"><!-- https://fontawesome.com/v5/icons/shopping-cart?f=classic&s=solid -->
+                    <path
+                        d="M528.1 301.3l47.3-208C578.8 78.3 567.4 64 552 64H159.2l-9.2-44.8C147.8 8 137.9 0 126.5 0H24C10.7 0 0 10.7 0 24v16c0 13.3 10.7 24 24 24h69.9l70.2 343.4C147.3 417.1 136 435.2 136 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-15.7-6.4-29.8-16.8-40h209.6C430.4 426.2 424 440.3 424 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-22.2-12.9-41.3-31.6-50.4l5.5-24.3c3.4-15-8-29.3-23.4-29.3H218.1l-6.5-32h293.1c11.2 0 20.9-7.8 23.4-18.7z" />
+                </svg>
+                <span id="notif">0</span>
+            </div>
         </div>
     </div>
-</div>
-<!-- end first header -->
+    <!-- end first header -->
 
-<!-- start second header -->
+    <!-- start second header -->
     <nav>
         <div class="nav">
             <a href="./kitchen.html">Kitchen</a>
@@ -61,22 +61,22 @@
     <!-- start second container -->
     <h2 class="s_h">Shop by category</h2>
     <section class="s_container">
-        <a href="#"><img
+        <a href="./kitchen.html"><img
                 src="https://images.pexels.com/photos/19227212/pexels-photo-19227212/free-photo-of-view-of-a-modern-kitchen-with-black-and-wooden-cabinets.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load"
                 alt="">
             <h2>KITCHEN</h2>
         </a>
-        <a href="#"><img
+        <a href="./dining table.html"><img
                 src="https://images.pexels.com/photos/3356416/pexels-photo-3356416.jpeg?auto=compress&cs=tinysrgb&w=600"
                 alt="">
             <h2 class="s_shop">DINING TABLE</h2>
         </a>
-        <a href="#"><img
+        <a href="./office.html"><img
                 src="https://media.istockphoto.com/id/153896360/photo/modern-office.jpg?s=612x612&w=0&k=20&c=SvULascjJ_3pnRvLQGAfw0V-B7iF6mq1qyv-G_TsEBc="
                 alt="">
             <h2 class="t_shop">OFFICE</h2>
         </a>
-        <a href="#"><img src="./asset/Beds_cat-300x300.jpg.webp" alt="">
+        <a href="./beds.html"><img src="./asset/Beds_cat-300x300.jpg.webp" alt="">
             <h2 class="f_shop">BEDS</h2>
         </a>
     </section>
