--- a/cart.html
+++ b/cart.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/index.css">
-    <title>Dining Table</title>
-</head>
 
+    <title>cart</title>
+</head>
 <body>
     <!-- start first header -->
     <div class="firstheader">
@@ -44,22 +43,19 @@
     <nav>
         <div class="nav">
             <a href="./kitchen.html">Kitchen</a>
-            <a class="kitchen" href="#">Dining Table</a>
+            <a href="./dining table.html">Dining Table</a>
             <a href="./office.html">Office</a>
             <a href="./beds.html">Beds</a>
         </div>
     </nav>
     <!-- end second header -->
-    <!-- start headline -->
-    <div class="headline">
-        <h1>Dining Table</h1>
-    </div>
-    <!-- end headline -->
-    <!-- start products -->
-    <div class="products" id="diningtable">
+   
+    
 
-    </div>
-    <!-- end products -->
+
+
+
+
 
     <!-- start communication container -->
     <div class="commu_container">
@@ -91,20 +87,23 @@
     </div>
     <!-- end communication container -->
 
-
     <!-- start about -->
     <section class="section_about">
         <div class="how">
-            <h1>How Can We Help</h1>
             <ul>
+                <li>
+                    <h1>How Can We Help</h1>
+                </li>
                 <li><a href="#">Terms&Conditions</a></li>
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">Refunds and Returns Policy</a></li>
             </ul>
         </div>
         <div class="about">
-            <h1>About Us</h1>
             <ul>
+                <li>
+                    <h1>About Us</h1>
+                </li>
                 <li><a href="#">Contact Us</a></li>
                 <li><a href="#">Sustainability</a></li>
                 <li><a href="#">Careers</a></li>
@@ -122,8 +121,6 @@
                 <li><b>Friday</b> <span>10:00 - 18:00</span></li>
                 <li><b>Saturday</b> <span>10:00 - 18:00</span></li>
                 <li><b>Sunday</b> <span>10:00 - 18:00</span></li>
-
-
             </ul>
         </div>
         <div class="frame">
@@ -148,47 +145,8 @@
     </footer>
 
 
-    <!-- Login and Register POP Up -->
-    <div class="overlay" id="loginOverlay">
-        <div class="popup">
-            <span class="close-btn" onclick="closePopup('loginOverlay')">&times;</span>
-            <h2>Login</h2>
-            <form action="">
-                <input class="input" type="email" id="email" placeholder="E-mail" required><br><br>
-                <input class="input" type="password" id="password" placeholder="PassWord" required><br><br>
-
-                <input class="btn" type="button" value="Log in" onclick="login()">
-
-                <p class="toggle-btn" onclick="togglePopup('loginOverlay', 'registerOverlay')">Don't have an
-                    account?Register here.</p>
-            </form>
-        </div>
-    </div>
-
-    <!-- Register Popup -->
-    <div class="overlay" id="registerOverlay">
-        <div class="popup">
-            <span class="close-btn" onclick="closePopup('registerOverlay')">&times;</span>
-            <h2>Register</h2>
-            <form action="">
-                <input class="input" type="text" id="username" placeholder="User Name"><br><br>
-                <input class="input" type="email" id="email-register" placeholder="E-mail"><br><br>
-                <input class="input" type="password" id="password-register" placeholder="PassWord"><br><br>
-                <input class="input" type="password" id="confirmpassword-register"
-                    placeholder="Confirm PassWord"><br><br>
-                <input class="btn up" type="button" value="Sign Up" onclick="signup()">
-
-                <p class="toggle-btn" onclick="togglePopup('registerOverlay', 'loginOverlay')">Already have an account?
-                    Login here.</p>
-            </form>
-        </div>
-    </div>
     <script src="./scripts/index.js" type="text/javascript"></script>
-    <script src="./scripts/dining table.js"></script>
-
-
-
-
+    <script src="./scripts/cart.js" type="text/javascript"></script>
+    
 </body>
-
 </html>
