--- a/cart.html
+++ b/cart.html
@@ -49,14 +49,11 @@
         </div>
     </nav>
     <!-- end second header -->
-   
-    
+    <!-- start body of page -->
+    <div id="allCart">
 
-
-
-
-
-
+    </div>
+    <!-- end body of page --> 
     <!-- start communication container -->
     <div class="commu_container">
         <a href="#"><sub><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" fill="rgb(85,26,139)"
