--- a/cart.html
+++ b/cart.html
@@ -50,7 +50,7 @@
     </nav>
     <!-- end second header -->
     <!-- start body of page -->
-    <div id="allCart">
+    <div class="products" id="allCart">
 
     </div>
     <!-- end body of page --> 
