Revert "cart done"
This reverts commit 27aff667d18eca13a1599e65257b4d6a1c4c5b53.

--- a/cart.html
+++ b/cart.html
@@ -50,7 +50,7 @@
     </nav>
     <!-- end second header -->
     <!-- start body of page -->
-    <div class="products" id="allCart">
+    <div id="allCart">
 
     </div>
     <!-- end body of page --> 
