--- a/cart.html
+++ b/cart.html
@@ -53,6 +53,9 @@
     <div class="products" id="allCart">
 
     </div>
+    <div id="total">
+
+    </div>
     <!-- end body of page --> 
     <!-- start communication container -->
     <div class="commu_container">
