active login & register & backgroundColor popup

--- a/beds.html
+++ b/beds.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./bootstrap-5.3.2-dist/css/bootstrap.min.css">
     <title>Beds</title>
 </head>
 
@@ -20,11 +21,20 @@
         </div>
         <div class="rightfirstheader">
             <div class="downeffect">
-                <svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="rgb(226,228,52)"
-                    viewBox="0 0 448 512"><!-- https://fontawesome.com/icons/user?f=classic&s=solid -->
-                    <path
-                        d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
-                </svg>
+                <div class="btn-group dropstart">
+                    <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="rgb(226,228,52)"
+                            viewBox="0 0 448 512"><!-- https://fontawesome.com/icons/user?f=classic&s=solid -->
+                            <path
+                                d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
+                        </svg>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#" onclick="openPopup('loginOverlay')">Login</a></li>
+                        <li><a class="dropdown-item" href="#" onclick="logOutBtn()">Log out</a></li>
+                    </ul>
+                </div>
             </div>
             <div class="downeffect">
                 <a href="./cart.html">
@@ -185,6 +195,7 @@
     </div>
     <script src="./scripts/index.js" type="text/javascript"></script>
     <script src="./scripts/beds.js"></script>
+    <script src="./bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
 
 
 
