--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./bootstrap-5.3.2-dist/css/bootstrap.min.css">
     <title>East Anglia Furniture</title>
 </head>
 
@@ -20,11 +21,20 @@
         </div>
         <div class="rightfirstheader">
             <div class="downeffect">
-                <svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="rgb(226,228,52)"
-                    viewBox="0 0 448 512"><!-- https://fontawesome.com/icons/user?f=classic&s=solid -->
-                    <path
-                        d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
-                </svg>
+                <div class="btn-group dropstart">
+                    <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="rgb(226,228,52)"
+                            viewBox="0 0 448 512"><!-- https://fontawesome.com/icons/user?f=classic&s=solid -->
+                            <path
+                                d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
+                        </svg>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#" onclick="openPopup('loginOverlay')">Login</a></li>
+                        <li><a class="dropdown-item" href="#" onclick="logOutBtn()">Log out</a></li>
+                    </ul>
+                </div>
             </div>
             <div class="downeffect">
                 <a href="./cart.html">
@@ -224,7 +234,45 @@
         </div>
     </footer>
 
+
+    
+
+    <!-- Login and Register POP Up -->
+    <div class="overlay" id="loginOverlay">
+        <div class="popup">
+            <span class="close-btn" onclick="closePopup('loginOverlay')">&times;</span>
+            <h2>Login</h2>
+            <form action="">
+                <input class="input" type="email" id="email" placeholder="E-mail" required><br><br>
+                <input class="input" type="password" id="password" placeholder="PassWord" required><br><br>
+
+                <input class="btn" type="button" value="Log in" onclick="login()">
+
+                <p class="toggle-btn" onclick="togglePopup('loginOverlay', 'registerOverlay')">Don't have an account?Register here.</p>
+            </form>
+        </div>
+    </div>
+
+    <!-- Register Popup -->
+    <div class="overlay" id="registerOverlay">
+        <div class="popup">
+            <span class="close-btn" onclick="closePopup('registerOverlay')">&times;</span>
+            <h2>Register</h2>
+            <form action="">
+                <input class="input" type="text" id="username" placeholder="User Name"><br><br>
+                <input class="input" type="email" id="email-register" placeholder="E-mail"><br><br>
+                <input class="input" type="password" id="password-register" placeholder="PassWord"><br><br>
+                <input class="input" type="password" id="confirmpassword-register" placeholder="Confirm PassWord"><br><br>
+                <input class="btn up" type="button" value="Sign Up" onclick="signup()">
+
+                <p class="toggle-btn" onclick="togglePopup('registerOverlay', 'loginOverlay')">Already have an account?
+                    Login here.</p>
+            </form>
+        </div>
+    </div>
+
     <script src="./scripts/index.js" type="text/javascript"></script>
+    <script src="./bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
