put username in log in

--- a/beds.html
+++ b/beds.html
@@ -31,7 +31,7 @@
                         </svg>
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#" onclick="openPopup('loginOverlay')">Login</a></li>
+                        <li><a class="dropdown-item" id="userName" href="#" onclick="openPopup('loginOverlay')"></a></li>
                         <li><a class="dropdown-item" href="#" onclick="logOutBtn()">Log out</a></li>
                     </ul>
                 </div>
