--- a/cart.html
+++ b/cart.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./bootstrap-5.3.2-dist/css/bootstrap.min.css">
 
     <title>cart</title>
 </head>
+
 <body>
     <!-- start first header -->
     <div class="firstheader">
@@ -19,20 +22,30 @@
         </div>
         <div class="rightfirstheader">
             <div class="downeffect">
-                <svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="rgb(226,228,52)"
-                    viewBox="0 0 448 512"><!-- https://fontawesome.com/icons/user?f=classic&s=solid -->
-                    <path
-                        d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
-                </svg>
+                <div class="btn-group dropstart">
+                    <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="rgb(226,228,52)"
+                            viewBox="0 0 448 512"><!-- https://fontawesome.com/icons/user?f=classic&s=solid -->
+                            <path
+                                d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z" />
+                        </svg>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" id="userName" href="#" onclick="openPopup('loginOverlay')"></a>
+                        </li>
+                        <li><a class="dropdown-item" href="#" onclick="logOutBtn()">Log out</a></li>
+                    </ul>
+                </div>
             </div>
             <div class="downeffect">
                 <a href="./cart.html">
                     <svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="rgb(226,228,52)"
-                    viewBox="0 0 576 512"><!-- https://fontawesome.com/v5/icons/shopping-cart?f=classic&s=solid -->
-                    <path
-                        d="M528.1 301.3l47.3-208C578.8 78.3 567.4 64 552 64H159.2l-9.2-44.8C147.8 8 137.9 0 126.5 0H24C10.7 0 0 10.7 0 24v16c0 13.3 10.7 24 24 24h69.9l70.2 343.4C147.3 417.1 136 435.2 136 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-15.7-6.4-29.8-16.8-40h209.6C430.4 426.2 424 440.3 424 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-22.2-12.9-41.3-31.6-50.4l5.5-24.3c3.4-15-8-29.3-23.4-29.3H218.1l-6.5-32h293.1c11.2 0 20.9-7.8 23.4-18.7z" />
-                </svg>
-                <span id="notif">0</span>
+                        viewBox="0 0 576 512"><!-- https://fontawesome.com/v5/icons/shopping-cart?f=classic&s=solid -->
+                        <path
+                            d="M528.1 301.3l47.3-208C578.8 78.3 567.4 64 552 64H159.2l-9.2-44.8C147.8 8 137.9 0 126.5 0H24C10.7 0 0 10.7 0 24v16c0 13.3 10.7 24 24 24h69.9l70.2 343.4C147.3 417.1 136 435.2 136 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-15.7-6.4-29.8-16.8-40h209.6C430.4 426.2 424 440.3 424 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-22.2-12.9-41.3-31.6-50.4l5.5-24.3c3.4-15-8-29.3-23.4-29.3H218.1l-6.5-32h293.1c11.2 0 20.9-7.8 23.4-18.7z" />
+                    </svg>
+                    <span id="notif">0</span>
                 </a>
             </div>
         </div>
@@ -56,7 +69,7 @@
     <div id="total">
 
     </div>
-    <!-- end body of page --> 
+    <!-- end body of page -->
     <!-- start communication container -->
     <div class="commu_container">
         <a href="#"><sub><svg xmlns="http://www.w3.org/2000/svg" height="20" width="20" fill="rgb(85,26,139)"
@@ -144,9 +157,44 @@
         </div>
     </footer>
 
+    <!-- Login and Register POP Up -->
+    <div class="overlay" id="loginOverlay">
+        <div class="popup">
+            <span class="close-btn" onclick="closePopup('loginOverlay')">&times;</span>
+            <h2>Login</h2>
+            <form action="">
+                <input class="input" type="email" id="email" placeholder="E-mail" required><br><br>
+                <input class="input" type="password" id="password" placeholder="PassWord" required><br><br>
 
+                <input class="btn" type="button" value="Log in" onclick="login()">
+
+                <p class="toggle-btn" onclick="togglePopup('loginOverlay', 'registerOverlay')">Don't have an
+                    account?Register here.</p>
+            </form>
+        </div>
+    </div>
+
+    <!-- Register Popup -->
+    <div class="overlay" id="registerOverlay">
+        <div class="popup">
+            <span class="close-btn" onclick="closePopup('registerOverlay')">&times;</span>
+            <h2>Register</h2>
+            <form action="">
+                <input class="input" type="text" id="username" placeholder="User Name"><br><br>
+                <input class="input" type="email" id="email-register" placeholder="E-mail"><br><br>
+                <input class="input" type="password" id="password-register" placeholder="PassWord"><br><br>
+                <input class="input" type="password" id="confirmpassword-register"
+                    placeholder="Confirm PassWord"><br><br>
+                <input class="btn up" type="button" value="Sign Up" onclick="signup()">
+
+                <p class="toggle-btn" onclick="togglePopup('registerOverlay', 'loginOverlay')">Already have an account?
+                    Login here.</p>
+            </form>
+        </div>
+    </div>
     <script src="./scripts/index.js" type="text/javascript"></script>
     <script src="./scripts/cart.js" type="text/javascript"></script>
-    
+    <script src="./bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
