--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
     </nav>
     <!-- end second header -->
 
-    <!-- start first container -->
+    <!-- start third container -->
     <section class="f_container">
         <h1>Welcome to EAF</h1>
         <h2>Home of Exceptional Furniture!</h2>
         <h2>Discover our curated collection of stylish and comfortable fu
             rnishings, designed to transform your living space. Explore now and create your dream home!</h2>
     </section>
-    <!-- end first container -->
+    <!-- end third container -->
 
-    <!-- start second container -->
+    <!-- start fourth container -->
     <h2 class="s_h">Shop by category</h2>
     <section class="s_container">
         <a href="./kitchen.html"><img
@@ -80,9 +80,9 @@
             <h2 class="f_shop">BEDS</h2>
         </a>
     </section>
-    <!-- end second container -->
+    <!-- end fourth container -->
 
-    <!-- start third container -->
+    <!-- start fifth container -->
     <section class="t_container">
         <div class="f_div"><img src="./asset/madeinuk-e1688809510434-300x300.png.webp" alt=""></div>
         <div class="s_div">
@@ -95,13 +95,10 @@
                 now and elevate your home decor with our stunning collection of British-made furniture.</p>
         </div>
     </section>
-    <!-- end third container -->
+    <!-- end fifth container -->
 
-    <!-- start fourth container -->
-    <!-- end fourth container -->
-
-    <!-- start fifth container -->
-    <section class="fifth_container">
+    <!-- start sixth container -->
+    <section class="sixth_container">
         <div class="f_div">
             <h1>Excelent customer service</h1>
             <p>Experience exceptional customer service when you shop with us. At our store, customer satisfaction is our
@@ -113,12 +110,10 @@
                 confidence and excellent customer service.</p>
         </div>
         <div class="fif_div"><img src="./asset/featureicon3-e1688809438145-300x300.png.webp" alt=""></div>
-
-
     </section>
-    <!-- end fifth container -->
+    <!-- end sixth container -->
 
-    <!-- start sixth container -->
+    <!-- start seventh container -->
     <section class="t_container">
         <div class="f_div"><img src="./asset/featureicon2-e1688809466853-300x300.png.webp" alt=""></div>
         <div class="s_div">
@@ -133,7 +128,7 @@
         </div>
 
     </section>
-    <!-- end sixth container -->
+    <!-- end seventh container -->
 
     <!-- start communication container -->
     <div class="commu_container">
@@ -210,6 +205,7 @@
 
     </section>
     <!-- end about -->
+
     <!-- start footer -->
     <footer>
         <p>Copyright © 2023 East Anglia Furniture</p>
