--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 for. We are committed to making your shopping experience as smooth and enjoyable as possible. Shop with
                 confidence and excellent customer service.</p>
         </div>
-        <div class="fif_div"><img src="./asset/featureicon3-e1688809438145-300x300.png.webp" alt=""></div>
+        <div class="six_div"><img src="./asset/featureicon3-e1688809438145-300x300.png.webp" alt=""></div>
     </section>
     <!-- end sixth container -->
 
