اهداء للبشمهندس محمد خالد

--- a/kitchen.html
+++ b/kitchen.html
@@ -74,7 +74,7 @@
 
             <div class="filter_content">
                 <div class="filter_group">
-                    <input type="text" placeholder="search by product's name" autocomplete="on" />
+                    <input type="text" placeholder="search by product's name" />
 
                     <span><svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" fill="white"
                             viewBox="0 0 512 512"><!-- https://fontawesome.com/v5/icons/search?f=classic&s=solid -->
@@ -88,7 +88,7 @@
                     <span>0</span>
                 </div>
                 <div class="indic">
-                    <span id="val">500</span>
+                    <span id="val">0</span>
                     <!-- <div id="box"></div> -->
                 </div>
             </div>
