--- a/beds.html
+++ b/beds.html
@@ -31,7 +31,8 @@
                         </svg>
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" id="userName" href="#" onclick="openPopup('loginOverlay')"></a></li>
+                        <li><a class="dropdown-item" id="userName" href="#" onclick="openPopup('loginOverlay')"></a>
+                        </li>
                         <li><a class="dropdown-item" href="#" onclick="logOutBtn()">Log out</a></li>
                     </ul>
                 </div>
@@ -39,11 +40,11 @@
             <div class="downeffect">
                 <a href="./cart.html">
                     <svg xmlns="http://www.w3.org/2000/svg" height="22" width="22" fill="rgb(226,228,52)"
-                    viewBox="0 0 576 512"><!-- https://fontawesome.com/v5/icons/shopping-cart?f=classic&s=solid -->
-                    <path
-                        d="M528.1 301.3l47.3-208C578.8 78.3 567.4 64 552 64H159.2l-9.2-44.8C147.8 8 137.9 0 126.5 0H24C10.7 0 0 10.7 0 24v16c0 13.3 10.7 24 24 24h69.9l70.2 343.4C147.3 417.1 136 435.2 136 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-15.7-6.4-29.8-16.8-40h209.6C430.4 426.2 424 440.3 424 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-22.2-12.9-41.3-31.6-50.4l5.5-24.3c3.4-15-8-29.3-23.4-29.3H218.1l-6.5-32h293.1c11.2 0 20.9-7.8 23.4-18.7z" />
-                </svg>
-                <span id="notif">0</span>
+                        viewBox="0 0 576 512"><!-- https://fontawesome.com/v5/icons/shopping-cart?f=classic&s=solid -->
+                        <path
+                            d="M528.1 301.3l47.3-208C578.8 78.3 567.4 64 552 64H159.2l-9.2-44.8C147.8 8 137.9 0 126.5 0H24C10.7 0 0 10.7 0 24v16c0 13.3 10.7 24 24 24h69.9l70.2 343.4C147.3 417.1 136 435.2 136 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-15.7-6.4-29.8-16.8-40h209.6C430.4 426.2 424 440.3 424 456c0 30.9 25.1 56 56 56s56-25.1 56-56c0-22.2-12.9-41.3-31.6-50.4l5.5-24.3c3.4-15-8-29.3-23.4-29.3H218.1l-6.5-32h293.1c11.2 0 20.9-7.8 23.4-18.7z" />
+                    </svg>
+                    <span id="notif">0</span>
                 </a>
             </div>
         </div>
@@ -65,6 +66,41 @@
         <h1>Beds</h1>
     </div>
     <!-- end headline -->
+
+    <!-- start filter section -->
+    <div class="filter_container">
+        <div class="filter_show">
+
+            <div class="filter_content">
+                <div class="filter_group">
+                    <input type="text" placeholder="search by product's name" />
+
+                    <span><svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" fill="white"
+                            viewBox="0 0 512 512"><!-- https://fontawesome.com/v5/icons/search?f=classic&s=solid -->
+                            <path
+                                d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6 .1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z" />
+                        </svg></span>
+                </div>
+                <div class="filter_group">
+                    <span>0</span>
+                    <input type="range" min="0" max="100" />
+                    <span>0</span>
+                </div>
+                <div class="indic">
+                    <span id="val">0</span>
+                    <!-- <div id="box"></div> -->
+                </div>
+            </div>
+
+            <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" preserveAspectRatio="none"
+                viewBox="0 0 384 512"><!-- https://fontawesome.com/icons/bookmark?f=classic&s=solid -->
+                <path
+                    d="M0 48V487.7C0 501.1 10.9 512 24.3 512c5 0 9.9-1.5 14-4.4L192 400 345.7 507.6c4.1 2.9 9 4.4 14 4.4c13.4 0 24.3-10.9 24.3-24.3V48c0-26.5-21.5-48-48-48H48C21.5 0 0 21.5 0 48z" />
+            </svg>
+        </div>
+    </div>
+    <!-- end filter section -->
+
     <!-- start products -->
     <div class="products" id="Bed">
 
@@ -196,7 +232,7 @@
     <script src="./scripts/index.js" type="text/javascript"></script>
     <script src="./scripts/beds.js"></script>
     <script src="./bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
-
+    <script src="./scripts/filter.js"></script>
 
 
 </body>
