--- a/dining table.html
+++ b/dining table.html
@@ -31,9 +31,8 @@
                         </svg>
                     </button>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" id="userName" href="#" onclick="openPopup('loginOverlay')"></a>
-                        </li>
-                        <li><a class="dropdown-item" href="#" onclick="logOutBtn()">Log out</a></li>
+                        <li><a class="dropdown-item" id="userName" href="#" onclick="openPopup('loginOverlay')">Log in</a></li>
+                        <li><a class="dropdown-item" id="logout" href="#" onclick="logOutBtn()">Log out</a></li>
                     </ul>
                 </div>
             </div>
